# LiDAR_IMU_Init

./: .gitignore  CMakeLists.txt  README.md  README_ROS2.md  ROS2_MIGRATION.md  build_ros2.sh  package.xml
.devcontainer/: Dockerfile  devcontainer.json
Log/: IMU_before_filter.txt  IMU_meas.txt  LiDAR_meas.txt  Lidar_before_filter.txt  Lidar_omg_after_rot.txt  acc_cost.txt  imu.txt  mat_out.txt  plot.py
config/: avia.yaml  horizon.yaml  mid360.yaml  ouster.yaml  pandar.yaml  robosense.yaml  velodyne.yaml
docker/: Dockerfile  docker_start.md  ros_entrypoint.sh
include/: color.h  common_lib.h  scope_timer.hpp  so3_math.h
include/LI_init/: LI_init.cpp  LI_init.h
include/ikd-Tree/: ikd_Tree.cpp  ikd_Tree.h
launch/: hesai_pandarXT.launch  livox_avia.launch  livox_horizon.launch  livox_mid360.launch  ouster.launch  robosense.launch  velodyne.launch
launch_ros2/: livox_avia.launch.py  livox_horizon.launch.py
matlab_code/: result_plot.asv
msg/: States.msg
python_code/: result_plot.py
result/: Initialization_result.txt
rviz_cfg/: fast_lo.rviz  spinning.rviz
src/: IMU_Processing.hpp  laserMapping.cpp  preprocess.cpp  preprocess.h
